# lsprotocol

./: .gitignore  README.md  RELEASE.md  conftest.py  noxfile.py  pyproject.toml  requirements.in  requirements.txt
.config/1espt/: PipelineAutobaseliningConfig.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  release.yml
.github/actions/build-package/: action.yml
.github/actions/lint/: action.yml
.github/workflows/: codeql-analysis.yml  dep-bot-auto-merge.yml  lsp_updater.py  pr-chat.yml  pr-check.yml  pr-labels.yml  push-check.yml  updater.yml  version-check.yml  version_check.py
azure-pipelines/: release-pypi.yml  release.yml  source_scan.yml
azure-pipelines/template/: build_packages.yml  publish_pypi.yml  static_analysis.yml
docs/: conf.py  index.rst  overview.rst  reference.rst
generator/: __main__.py  lsp.json  lsp.schema.json  model.py  requirements.in  requirements.txt  utils.py
generator-plugins/dotnet/: dotnet_classes.py  dotnet_commons.py  dotnet_constants.py  dotnet_enums.py  dotnet_helpers.py  dotnet_special_classes.py  dotnet_utils.py
generator-plugins/dotnet/custom/: CustomStringConverter.cs  DocumentSelectorConverter.cs  DocumentUriConverter.cs  ILSPMessage.cs  ILSPNotification.cs  ILSPRequest.cs  ILSPResponse.cs  ILSPResponseError.cs  IOrType.cs  IRequest.cs  MessageDirection.cs  OrType.cs  OrTypeConverter.cs  Since.cs  Validators.cs
generator-plugins/python/: __init__.py  utils.py
generator-plugins/rust/: rust_commons.py  rust_enum.py  rust_file_header.py  rust_lang_utils.py  rust_structs.py  rust_utils.py
generator-plugins/testdata/: __init__.py  testdata_generator.py  testdata_utils.py
generator/plugins/crystal/: __init__.py  crystal_utils.py
generator/plugins/dotnet/: __init__.py  dotnet_classes.py  dotnet_helpers.py  dotnet_special_classes.py  dotnet_utils.py
generator/plugins/dotnet/custom/: CustomObjectConverter.cs  IResponse.cs  IResponseError.cs  OrType.cs  OrTypeArrayConverter.cs  OrTypeConverter.cs
generator/plugins/python/: utils.py
generator/plugins/rust/: __init__.py  rust_commons.py  rust_enum.py  rust_structs.py  rust_tests.py  rust_utils.py
generator/plugins/testdata/: __init__.py  testdata_generator.py  testdata_utils.py
lsprotocol/: __about__.py  _hooks.py  converters.py  types.py  validators.py
scripts/: onCreateCommand.sh
tests/: jsonrpc.py  requirements.in  requirements.txt  test_cattrs_special_cases.py  test_custom_validators.py  test_import.py  test_location.py  test_model.py  test_schema.py
tests/crystal/: README.md
tests/dotnet/lsprotocol_tests/: LSPTests.cs  UnitTest1.cs  Usings.cs
tests/generator/: requirements.in  requirements.txt  test_model.py  test_schema.py
tests/notifications/: test_exit.py  test_progress.py
tests/python/: requirements.in  requirements.txt  test_cattrs_special_cases.py  test_enums.py  test_generated_data.py  test_misc.py  test_position.py  test_range.py
tests/python/common/: jsonrpc.py
tests/python/notifications/: test_progress.py
tests/python/requests/: test_inlay_hint_resolve_request.py  test_workspace_symbols_request.py
tests/requests/: test_initilize_request.py  test_workspace_sematic_tokens_refresh.py
tests/rust/: Cargo.toml
tests/rust/src/: main.rs
