[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsprotocol"
description = 'Python implementation of the Language Server Protocol.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Microsoft Corporation", email = "ptvshelp@microsoft.com" },
]
classifiers = [
  "Development Status :: 5 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["attrs","cattrs"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/lsprotocol#readme"
Issues = "https://github.com/unknown/lsprotocol/issues"
Source = "https://github.com/unknown/lsprotocol"

[tool.hatch.version]
path = "lsprotocol/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.vscode",
  "/.generator",
  "/.test",
]
packages = ["lsprotocol"]

[tool.hatch.build.targets.wheel]
packages = ["lsprotocol"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=lsprotocol ./tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "lsprotocol/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
