[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lsprotocol"
description = 'Python implementation of the Language Server Protocol.'
version = "3.17.0a0"
authors = [{name = "Microsoft Corporation", email = "ptvshelp@microsoft.com"}]
license = {file = "LICENSE"}
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.7"
maintainers = [
  { name = "Brett Cannon", email = "brcan@microsoft.com" },
  { name = "Karthik Nadig", email = "kanadig@microsoft.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["attrs", "cattrs"]

[project.urls]
Issues = "https://github.com/microsoft/lsprotocol/issues"
Source = "https://github.com/microsoft/lsprotocol"

[tool.flit.sdist]
include = ["lsprotocol/", "README.md", "LICENSE"]
exclude = [
  "lsprotocol/__pycache__/",
  "generator/",
  "tests/",
  ".vscode/",
  ".venv/",
  ".gitignore",
  "CODE_OF_CONDUCT.md",
  "conftest.py",
  "noxfile.py",
  "requirements.in",
  "requirements.txt",
  "SECURITY.md",
  "SUPPORT.md",
]


